<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="Navigation_view">

    <group>

        <item
            android:id="@+id/navigationListService"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_item_list_service" />
    </group>


    <item android:title="@string/menu_item_service">

        <menu>
            <item
                android:id="@+id/navigationHome"

                android:title="@string/menu_item_home" />

            <item
                android:id="@+id/navigationHotel"

                android:title="@string/menu_item_hotel" />

            <item
                android:id="@+id/navigationHospital"

                android:title="@string/menu_item_hospitals" />

            <item
                android:id="@+id/navigationRestaurant"

                android:title="@string/menu_item_restaurant" />

        </menu>

    </item>

    <item android:title="@string/menu_item_personality">
        <menu>

            <item
                android:id="@+id/navigationAccount"

                android:title="@string/menu_item_account" />

            <item
                android:id="@+id/navigationSettings"
                android:title="@string/menu_item_setting"
               />

        </menu>

    </item>



</menu>